--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>NoteNest</title>
+    <title>Serene</title>
   </head>
   <body>
     <script src="https://kit.fontawesome.com/f6912c4407.js" crossorigin="anonymous"></script>
